<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loginScreenLayout"
        tools:context="com.example.michael.assignment1michael.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:textSize="32sp"
            android:text="@string/userid"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:textSize="32sp"
            android:maxLength="20"
            android:minWidth="900dp"
            android:id="@+id/username"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:ellipsize="start"
            android:layout_centerVertical="true"
            android:hint="@string/your_id"
            android:inputType="text"
            android:background="@drawable/edittextstyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="Arial"
            android:textSize="32sp"
            android:text="@string/password"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="900dp"
            android:fontFamily="Arial"
            android:textSize="32sp"
            android:maxLength="20"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:hint="@string/passwordhint"
            android:ellipsize="start"
            android:background="@drawable/edittextstyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logonButton"
            android:layout_gravity="right"
            android:fontFamily="Arial"
            android:textSize="32sp"
            android:text="@string/log_in"/>

    </LinearLayout>
</ScrollView>
    <!-- this is a comment
    android:hint="Search text"
    android:gravity="center"-->
    <!--android:layout_centerVertical="true"-->
